--- a/concept/index.htm
+++ b/concept/index.htm
@@ -72,7 +72,7 @@
                         <tr>
                           <td><p class="para">在广阔的地图上纵横驰骋、自由奔放地奔跑、<br />
                               一款令人振奋和惊心动魄的全新汽车动作驾驶动作游戏，现已推出!<br />
-              因为没有「固定的路线」，所以可以根据自身喜好自由享受驾驶乐趣、例如您通常想不到的捷径或探索小路等。</p></td>
+              因为没有「固定路线」，所以可以根据自身喜好自由享受驾驶乐趣、例如您意想不到的捷径或探索小路等。</p></td>
                         </tr>
                     </table></td>
                   </tr>
